1.adding the edit and delete

--- a/templates/home.html
+++ b/templates/home.html
@@ -32,9 +32,9 @@
                     <div class="card-body">
                         {{task.task}}
                         <span style="position: relative; float: right;">
-                            <a class="btn btn-success"><i class="fa fa-check"></i> Mark as Done</a>
-                            <a class="btn btn-danger"><i class="fa fa-trash"></i></a>
-                            <a class="btn btn-primary"><i class="fa fa-pencil"></i></a>
+                            <a href="{% url 'taskcompleted' task.pk %}" class="btn btn-success"><i class="fa fa-check"></i> Mark as Done</a>
+                            <a href="{% url 'delete' task.pk %}"class="btn btn-danger"><i class="fa fa-trash"></i></a>
+                            <a href="{% url 'edit' task.pk %}"class="btn btn-primary"><i class="fa fa-pencil"></i></a>
                         </span>
                     </div>
                 </div>
@@ -44,23 +44,31 @@
             <div class="col-md-5 col-lg-5">
                 <h5>Completed Tasks</h5>
                 <!-- List of all the tasks that have completed -->
+                {% for task in  taskcompleted %}
+                
+             
                 <div class="card m-1">
                     <div class="card-body">
-                        This is the completed task.
+                       {{task.task}}
+                       <span style="position: relative; float: right;">
+                            <a href="{% url 'tasknotdone' task.pk %}" class="btn btn-warning"><i class="fa fa-check"></i> Mark as  UnDone</a>
+                           
+                        </span>
                     </div>
                 </div>
+                   {% endfor %}
             </div>
         </div>
      
         <div class="row">
             <div class="col-md-6 col-lg-6 p-0" style="position: absolute; bottom: 50px;">
                 <!-- To Do Form -->
-                <form action="" method="POST" >
+                <form action="{% url 'addTask' %}" method="POST" >
                     {% csrf_token %}
                     <div class="form-group">
                         <span style="display: flex;">
-                            <input type="text" class="form-control" placeholder="Add a task">
-                            <button class="btn btn-primary" style="width: 200px;"><i class="fa fa-plus"></i> Add</button>
+                            <input type="text" name="task" class="form-control" placeholder="Add a task">
+                            <button type="submit" class="btn btn-primary" style="width: 200px;"><i class="fa fa-plus"></i> Add</button>
                         </span>
                     </div>
                 </form>
